Zork - Part 4 (Finished but needs fixes)

--- a/Zork/Zork.csproj
+++ b/Zork/Zork.csproj
@@ -13,7 +13,7 @@
     <None Update="Rooms2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Rooms.json">
+    <None Update="Zork.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
